--- a/.github/workflows/android-build-scripts.yml
+++ b/.github/workflows/android-build-scripts.yml
@@ -24,6 +24,8 @@ on:
       - 'tools/**'
       - 'android.sh'
 
+  workflow_dispatch:
+
 jobs:
   build-main-on-linux:
     name: android main on linux
